# agent

./: .gitignore  README.md  agent.spec  build.sh  launcher.py  package-lock.json  package.json  pyproject.toml  run_agent.sh
src/: agent.js  agent.py  cache.js  cache.py  config.js  config.py  editor.js  index.js  llm.js  llm.py  requirements.txt  tools.js  tools.py  undo.py  utils.js  utils.py  web_search.py
src/providers/: gemini.js  gemini.py  openrouter.js  openrouter.py
