[project]
name = "agent"
version = "0.1.0"
description = "A powerful agentic AI assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit>=3.0.0",
    "requests>=2.0.0",
    "python-dotenv>=1.0.0",
    "Pygments>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
